<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"
        android:layout_marginTop="@dimen/margin32"
        android:layout_marginEnd="@dimen/margin8"
        android:layout_marginRight="@dimen/margin8"
        android:contentDescription="@string/pp_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chiedozie_small" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin8"
        android:layout_marginLeft="@dimen/margin8"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin8"
        android:layout_marginRight="@dimen/margin8"
        android:ems="10"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_size24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_name"/>

    <TextView
        android:id="@+id/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/track_text"
        android:textSize="@dimen/text_size18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/country_text"
        android:textSize="@dimen/text_size18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/email_text"
        android:textSize="@dimen/text_size18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/phone_text"
        android:textSize="@dimen/text_size18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/slack_text"
        android:textSize="@dimen/text_size18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />


</android.support.constraint.ConstraintLayout>